Fix alignment in package rating section and correct company name assignment in testimonials component

--- a/src/app/pages/hotel/hotel.component.scss
+++ b/src/app/pages/hotel/hotel.component.scss
@@ -151,7 +151,7 @@
 .package-rating-bottom-txt ul {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     gap: 10px;
     padding: 0;
 }
